Fixed Toolbar z-index not being applied to correct element.

--- a/ambientimpact_base/stylesheets/components/_toolbar.scss
+++ b/ambientimpact_base/stylesheets/components/_toolbar.scss
@@ -4,6 +4,10 @@
 
 .toolbar {
   &.toolbar-oriented {
-    @include z-index('toolbar');
+    // This is the element that's either absolute or fixed depending on the
+    // screen width.
+    .toolbar-bar {
+      @include z-index('toolbar');
+    }
   }
 }
